syntax = "proto3";
package liubaninc.m0.wasm;

import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

option go_package = "github.com/liubaninc/m0/x/wasm/types";

message InputExt {
  string bucket = 1;
  string key = 2;
  string ref_tx = 3;
  int32  ref_msg = 4;
  int32 ref_offset = 5;
}

message OutputExt {
  string bucket = 1;
  string key = 2;
  bytes value = 3;
}

message ContractEvent {
  string contract = 1;
  string name = 2;
  bytes body = 3;
}

enum ResourceType {
  CPU = 0;
  MEMORY = 1;
  DISK = 2;
  XFEE = 3; // the fee used in kernel contract
}

message ResourceLimit {
  ResourceType type = 1;
  int64 limit = 2;
}

message InvokeRequest {
  string module_name = 1;
  string contract_name = 2;
  string method_name = 3;
  map<string, bytes> args = 4;
  repeated ResourceLimit resource_limits = 5;
  // amount is the amount transfer to the contract
  repeated cosmos.base.v1beta1.Coin amount = 6 [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

message VersionedData {
  PureData pureData = 1;
  bytes refTx = 2;
  int32 refMsg = 3;
  int32 refOffset = 4;
}

message PureData {
  string bucket = 1;
  bytes key = 2;
  bytes value = 3;
}

message ContractResponse {
  int32  status = 1;
  string message = 2;
  bytes  body = 3;
}
